force-app/main/default/objects/Goal_Tracking__c/Goal_Tracking__c.object-meta.xml
<CustomObject>
    <label>Goal Tracking</label>
    <nameField>
        <displayFormat>GT-{0000}</displayFormat>
        <label>Goal Tracking</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goal Trackings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>