force-app/main/default/objects/Goal_Tracking__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <label>Goal</label>
    <referenceTo>Goal__c</referenceTo>
    <relationshipLabel>Goal Trackings</relationshipLabel>
    <relationshipName>Goal_Trackings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>