force-app/main/default/objects/Goal_Tracking__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only One-Time Opportunity can be tagged here</errorMessage>
        <filterItems>
            <field>Opportunity.RecordType.Name</field>
            <operation>equals</operation>
            <value>One Time</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Goal Trackings</relationshipLabel>
    <relationshipName>Goal_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>